# par_gpt

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  audit.md  demo.tape  edit_env.sh  maze.py  pyproject.toml  pyrightconfig.json  ruff.toml  transcript.txt
.claude/commands/: cleanup_claude.md  par_todo.md  prime.md
docker/: docker-compose.yml
sandbox/code_runner/: Dockerfile
src/agentrun/: __init__.py
src/par_gpt/: __init__.py  __main__.py  agent_messages.py  agents.py  aider_agent.py  cache_manager.py  cache_manger.py  lazy_import_manager.py  lazy_tool_loader.py  memory_utils.py  obsidian.py  tool_context.py  tts_manager.py  tts_manger.py  utils.py  voice_input_manager.py  voice_input_manger.py
src/par_gpt/ai_tools/: __init__.py  ai_tools.py  par_python_repl.py
src/par_gpt/cli/: __init__.py  app.py  config.py  context.py  options.py  security.py
src/par_gpt/commands/: __init__.py  agent.py  base.py  code_review.py  generate_prompt.py  git.py  llm.py  sandbox.py  simple.py  stardew.py  utils.py
src/par_gpt/lib/: llm_config.py  output_utils.py  par_logging.py  pricing_lookup.py  provider_cb_info.py  search_utils.py  utils.py  web_tools.py
src/par_gpt/profiling/: profile_tools.py
src/par_gpt/prompts/: blog_post_from_script_prompt.xml  meta_prompt.xml  prompt_bug_analysis.xml
src/par_gpt/repo/: __init__.py  repo.py
src/par_gpt/utils/: __init__.py  audio_manager.py  config.py  config_migration.py  config_validation.py  console_manager.py  context_manager.py  error_helpers.py  error_registry.py  image_processor.py  lazy_utils_loader.py  llm_invoker.py  path_security.py  redis_manager.py  security_warnings.py  timing.py  utils_facade.py
src/par_utils/: README.md  __init__.py
src/par_utils/caching/: __init__.py  disk_cache.py
src/par_utils/console/: __init__.py  manager.py
src/par_utils/errors/: __init__.py  handlers.py  registry.py
src/par_utils/performance/: __init__.py  lazy_loading.py  timing.py
src/par_utils/security/: __init__.py  path_validation.py
src/sandbox/: __init__.py
src/sandbox/docker/: docker-compose.yml
tests/: __init__.py  test_context_manager.py  test_error_registry.py
