[project]
name = "par_gpt"
dynamic = ["version"]
description = "Par Gpt"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Paul Robello", email = "probello@gmail.com" }]
maintainers = [{ name = "Paul Robello", email = "probello@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
keywords = ["ai", "langchain", "openai", "anthropic", "ollama", "llamacpp", "cli", "llm"]

dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.3",
    "google-api-python-client>=2.159.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "html2text>=2024.2.26",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-google-community[drive,gmail]>=2.0.4",
    "langchain>=0.3.14",
    "langgraph>=0.2.62",
    "pandas>=2.2.3",
    "prompt-toolkit>=3.0.48",
    "pydantic-core>=2.27.1",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "orjson>=3.10.14",
    "typer>=0.15.1",
    "git-python>=1.0.3",
    "pathspec>=0.12.1",
    "numpy>=1.26.4",
    "matplotlib>=3.10.0",
    "faker>=33.3.1",
    "rich-pixels>=3.0.1",
    "keyring>=25.6.0",
    "pygithub>=2.5.0",
    "clipman>=3.3.1",
    "par-ai-core",
    "pyfiglet>=1.0.2",
    "sixel>=0.2.0",
    "feedparser>=6.0.11",
    "docker>=7.1.0",
    "restrictedpython>=7.4",
    "pyautogui>=0.9.54",
    "pywinctl>=0.4.1",
    "opencv-python>=4.10.0.84",
    "elevenlabs>=1.50.3",
    "pyttsx3>=2.98",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
    "realtimestt>=0.3.93",
    "kokoro-onnx>=0.2.7",
    "textual-image>=0.7.0",
]
packages = ["src/par_gpt", "src/sandbox"]

[project.urls]
Homepage = "https://github.com/paulrobello/par_gpt"
Documentation = "https://github.com/paulrobello/par_gpt/blob/main/README.md"
Repository = "https://github.com/paulrobello/par_gpt"
Issues = "https://github.com/paulrobello/par_gpt/issues"
Discussions = "https://github.com/paulrobello/par_gpt/discussions"
Wiki = "https://github.com/paulrobello/par_gpt/wiki"

[project.scripts]
par_gpt = "par_gpt.__main__:app"

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[dependency-groups]
mac = [
    'pyobjc>=11.0.0 ; platform_system == "Darwin"',
]
dev = [
    "build>=1.2.1",
    "twine>=5.1.1",
    "pyright>=1.1.379",
    "pre-commit>=3.8.0",
    "ruff>=0.7.0",
    "types-orjson>=3.6.2",
    "docutils-stubs>=0.0.22",
    "pyinstrument>=5.0.0",
]

[tool.hatch.version]
path = "src/par_gpt/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/par_gpt"]
include = [
    "py.typed",
    "**/*.py",
    "**/*.html",
    "**/*.gif",
    "**/*.jpg",
    "**/*.png",
    "**/*.md",
    "**/*.tcss",
    "**/*.onnx",
    "**/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/par_gpt",
    "LICENSE",
    "README.md",
    "extraction_prompt.md",
    "pyproject.toml"
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib"
]

#[tool.uv.sources]
#par-ai-core = { path = "../par_ai_core", editable = true }
