[project]
name = "par_gpt"
dynamic = [
    "version",
]
description = "Par Gpt"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "ai",
    "langchain",
    "openai",
    "anthropic",
    "ollama",
    "llamacpp",
    "cli",
    "llm",
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-api-python-client>=2.178.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "html2text>=2025.4.15",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-experimental>=0.3.4",
    "langchain-google-community[drive,gmail]>=2.0.7",
    "langchain-openai>=0.3.28",
    "langchain>=0.3.27",
    "langgraph>=0.6.4",
    "pandas>=2.3.1",
    "prompt-toolkit>=3.0.51",
    "pydantic-core>=2.33.2",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "orjson>=3.11.1",
    "typer>=0.16.0",
    "git-python>=1.0.3",
    "pathspec>=0.12.1",
    "numpy",
    "matplotlib>=3.10.5",
    "faker>=37.5.3",
    "rich-pixels>=3.0.1",
    "keyring>=25.6.0",
    "pygithub>=2.7.0",
    "clipman>=3.3.3",
    "pyfiglet>=1.0.3",
    "sixel>=0.2.0",
    "feedparser>=6.0.11",
    "docker>=7.1.0",
    "restrictedpython>=8.0",
    "pyautogui>=0.9.54",
    "pywinctl>=0.4.1",
    "opencv-python>=4.11.0.86",
    "elevenlabs>=2.9.1",
    "pyttsx3>=2.99",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "realtimestt>=0.3.104",
    "kokoro-onnx",
    "textual-image>=0.8.3",
    "pyobjc>=11.1 ; platform_system == \"Darwin\"",
    "toml>=0.10.2",
    "tomli-w>=1.2.0",
    "redis>=6.4.0",
    "langchain-neo4j",
    "tinify>=1.7.0",
    "langchain-mcp-adapters>=0.1.9",
    "cryptography>=45.0.6",
    "pydantic-settings>=2.10.1",
    "par-ai-core>=0.3.2",
]
packages = [
    "src/par_gpt",
    "src/par_utils",
    "src/sandbox",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/par_gpt"
Documentation = "https://github.com/paulrobello/par_gpt/blob/main/README.md"
Repository = "https://github.com/paulrobello/par_gpt"
Issues = "https://github.com/paulrobello/par_gpt/issues"
Discussions = "https://github.com/paulrobello/par_gpt/discussions"
Wiki = "https://github.com/paulrobello/par_gpt/wiki"

[project.scripts]
par_gpt = "par_gpt.__main__:app"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pyright>=1.1.403",
    "pre-commit>=4.2.0",
    "ruff>=0.12.8",
    "types-orjson>=3.6.2",
    "docutils-stubs>=0.0.22",
    "pyinstrument>=5.0.3",
]

[tool.hatch.version]
path = "src/par_gpt/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/par_gpt",
    "src/par_utils",
    "src/sandbox",
]
include = [
    "py.typed",
    "**/*.py",
    "**/*.html",
    "**/*.gif",
    "**/*.jpg",
    "**/*.png",
    "**/*.md",
    "**/*.tcss",
    "**/*.onnx",
    "**/*.json",
    "**/*.yml",
    "**/Dockerfile",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/par_gpt",
    "src/par_utils",
    "src/sandbox",
    "LICENSE",
    "README.md",
    "extraction_prompt.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
]
